--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
@@ -24,6 +25,9 @@
 
 # Visual Studio cache directory
 .vs/
+
+# JetBrains Rider project files
+.idea/
 
 # Gradle cache directory
 .gradle/
